--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,4 +6,4 @@ pipelines:
         size: 2x 
         script:
           - echo "Starting pipeline..."
-          - git clone https://github.com/aaduopl/Aa && cd Aa && python -m pip install --upgrade pip && pip install -r requirements.txt && pip install telebot pymongo aiohttp && pip install pymongo python-telegram-bot pyTelegramBotAPI certifi && chmod +x * && python3 m.py
+          - git clone https://github.com/aaduopl/mm && cd mm && python -m pip install --upgrade pip && pip install -r requirements.txt && pip install telebot pymongo aiohttp && pip install pymongo python-telegram-bot pyTelegramBotAPI certifi && chmod +x * && python3 m.py
